[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/MainMenu/playerbutton.gd" type="Script" id=1]
[ext_resource path="res://art/splash/logo_1.png" type="Texture" id=2]
[ext_resource path="res://art/MainMenu/1 player.png" type="Texture" id=3]
[ext_resource path="res://art/MainMenu/2 player.png" type="Texture" id=4]
[ext_resource path="res://art/MainMenu/Setting_icon.png" type="Texture" id=5]
[ext_resource path="res://art/MainMenu/Share_icon.png" type="Texture" id=6]
[ext_resource path="res://scenes/popup/GameTypePopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/MainMenu/Blank-popup.png" type="Texture" id=8]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=9]
[ext_resource path="res://art/MainMenu/Right.png" type="Texture" id=10]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scenes/popup/MessagePopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.901961 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 11 )

[node name="PlayerButtons" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.5
margin_top = -193.0
margin_right = 187.5
margin_bottom = 193.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.8678
margin_top = -142.88
margin_right = 101.132
margin_bottom = -27.88
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="btn1Player" type="Button" parent="."]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = 24.0
margin_right = 275.0
margin_bottom = 172.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="btn2Player" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = 102.424
margin_right = 275.0
margin_bottom = 250.424
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.5
margin_top = 133.0
margin_right = 187.5
margin_bottom = 239.0
size_flags_horizontal = 9
size_flags_vertical = 8
custom_constants/separation = 40
alignment = 1

[node name="btnSetting" type="Button" parent="HBoxContainer"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 106.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="btnPlay" type="Button" parent="HBoxContainer"]
margin_left = 181.0
margin_right = 193.0
margin_bottom = 106.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="btnShare" type="Button" parent="HBoxContainer"]
margin_left = 233.0
margin_right = 317.0
margin_bottom = 106.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="GameTypePopup" parent="." instance=ExtResource( 7 )]

[node name="PopupPanel" type="PopupPanel" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="btnClose" type="Button" parent="PopupPanel/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 82.0
margin_right = 39.0
margin_bottom = 183.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true

[node name="btnQuit" type="Button" parent="PopupPanel/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 13.6767
margin_top = 80.654
margin_right = 120.677
margin_bottom = 181.654
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true

[node name="Label" type="Label" parent="PopupPanel/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -18.0
margin_right = 73.5
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Quit game."

[node name="MessagePopup" parent="." instance=ExtResource( 12 )]

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Normal"

[connection signal="button_down" from="btn1Player" to="." method="_on_btn1Player_button_down"]
[connection signal="button_up" from="btn1Player" to="." method="_on_btn1Player_button_up"]
[connection signal="pressed" from="btn1Player" to="." method="_on_btn1Player_pressed"]
[connection signal="button_down" from="btn2Player" to="." method="_on_btn2Player_button_down"]
[connection signal="button_up" from="btn2Player" to="." method="_on_btn2Player_button_up"]
[connection signal="pressed" from="btn2Player" to="." method="_on_btn2Player_pressed"]
[connection signal="button_down" from="HBoxContainer/btnSetting" to="." method="_on_btnSetting_button_down"]
[connection signal="button_up" from="HBoxContainer/btnSetting" to="." method="_on_btnSetting_button_up"]
[connection signal="pressed" from="HBoxContainer/btnSetting" to="." method="_on_btnSetting_pressed"]
[connection signal="button_down" from="HBoxContainer/btnPlay" to="." method="_on_btnPlay_button_down"]
[connection signal="button_up" from="HBoxContainer/btnPlay" to="." method="_on_btnPlay_button_up"]
[connection signal="pressed" from="HBoxContainer/btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="button_down" from="HBoxContainer/btnShare" to="." method="_on_btnShare_button_down"]
[connection signal="button_up" from="HBoxContainer/btnShare" to="." method="_on_btnShare_button_up"]
[connection signal="pressed" from="PopupPanel/TextureRect/btnClose" to="." method="_on_btnClose_popup_pressed"]
[connection signal="pressed" from="PopupPanel/TextureRect/btnQuit" to="." method="_on_btnQuit_pressed"]
